@@ -31,6 +31,7 @@ Cacti CHANGELOG
 -feature: Rerun already associated SNMP Queries if any SNMP related field was changed during host edit
 -feature: add graph title to graphs page
 -feature: add links to Graph Management and Data Sources to Device Edit Screen
+-feature: add links to Graph Template and Host Edit to Graph Edit Screen
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
