@@ -8,6 +8,7 @@ Cacti CHANGELOG
 -bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
 -feature: add graph title to graphs page
 -feature: add links to Graph Management and Data Sources to Device Edit Screen
+-feature: add links to Graph Template and Host Edit to Graph Edit Screen
 
 
 0.8.7b
